Fixed alignment for tablets and desktops

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,7 @@ address {
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
+  max-width: 960px;
 }
 
 img {
@@ -588,7 +589,7 @@ input[type=button] {
   /*----------Tablet Styles----------*/
   /*-General Styles-*/
   .content-wrapper {
-    width: 640px;
+    max-width: 640px;
     margin: 100px 0;
   }
 
@@ -610,7 +611,7 @@ input[type=button] {
 
   header .content-wrapper {
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   header nav {
@@ -708,7 +709,7 @@ input[type=button] {
 
   .footer-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
   }
 
@@ -808,8 +809,13 @@ input[type=button] {
     padding: 15px 0;
   }
 
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
   .content-wrapper {
-    width: 960px;
+    max-width: 960px;
   }
 
   h2 {
@@ -864,11 +870,15 @@ input[type=button] {
   /*-Homepage Reviews Styles-*/
 
   .reviews article div {
-    width: 42%;
   }
 
   /*-Footer Styles-*/
-
+  .footer-content {
+    justify-content: space-between;
+  }
+  footer .content-wrapper {
+    width: 100%;
+  }
   footer h4 {
     font-size: 1.875em;
   }
